added basic user routes, model, and controllers. Added API documentation for getAllUsers
