# backend/app.js
@@ -8,6 +8,7 @@ const fs = require('fs');
 
 const setRouter = require('./routes/setRoutes');
 const noteRouter = require('./routes/noteRoutes');
+const userRouter = require('./routes/userRoutes');
 
 // SWAGGER API Documentation
 const swaggerFile = fs.readFileSync('backend/api/swagger.yaml', 'utf-8');
@@ -34,6 +35,7 @@ app.use(
   swaggerUi.setup(swaggerDocument, options)
 );
 
+app.use('/api/v1/users', userRouter);
 app.use('/api/v1/sets', setRouter);
 app.use('/api/v1/notes', noteRouter);
 
