# backend/controllers/userController.js
@@ -1,0 +1,59 @@
+// const mongoose = require('mongoose');
+const User = require('../models/userModel');
+
+exports.getAllUsers = async (req, res, next) => {
+  try {
+    const users = await User.find();
+
+    res.status(200).json({
+      status: 'success',
+      results: users.length,
+      data: {
+        users,
+      },
+    });
+  } catch (err) {
+    res.status(400).json({
+      status: 'fail',
+      message: err,
+    });
+  }
+};
+
+exports.getUser = async (req, res, next) => {
+  try {
+    const id = req.params.usrId;
+    const user = await User.findById(id);
+
+    res.status(200).json({
+      status: 'success',
+      data: {
+        user,
+      },
+    });
+  } catch (err) {
+    res.status(400).json({
+      status: 'fail',
+      message: err,
+    });
+  }
+};
+
+exports.createUser = async (req, res, next) => {
+  try {
+    const newUser = await User.create(req.body);
+
+    res.status(201).json({
+      status: 'success',
+      data: {
+        user: newUser,
+      },
+    });
+  } catch (err) {
+    console.log(err);
+    res.status(400).json({
+      status: 'fail',
+      message: err,
+    });
+  }
+};
