# backend/routes/userRoutes.js
@@ -1,0 +1,13 @@
+const express = require('express');
+const userController = require('../controllers/userController');
+
+const router = express.Router();
+
+router
+  .route('/')
+  .get(userController.getAllUsers)
+  .post(userController.createUser);
+
+router.route('/:usrId').get(userController.getUser);
+
+module.exports = router;
